fixed horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -238,7 +238,6 @@ input:focus {
   background-color: rgba(255, 255, 255, 0.25);
   height: 865px;
   padding: 30px;
-  margin: 0 15px;
   font-family: "Roboto",
     sans-serif;
   font-size: 21px;
